--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+# Commentaire ...
+# Autre commentaire ...
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -7,6 +11,4 @@
     <groupId>com.ebiznext</groupId>
     <artifactId>formationgit</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
 </project>
