--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 # Commentaire ...
 # Autre commentaire ...
 # Et de trois !
-# Oh le joli quatrième commentaire ...
+# Quatre ! On ne s'arrête plus !
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
